# nr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: designdocs.md
examples/: library_usage.rs
src/: lib.rs  main.rs
