[package]
name = "nr"
version = "0.1.0"
edition = "2021"
authors = ["naoto0822"]
description = "A macOS notification library and CLI tool using terminal-notifier"
license = "MIT"
repository = "https://github.com/naoto0822/nr"
homepage = "https://github.com/naoto0822/nr"
documentation = "https://docs.rs/nr"
readme = "README.md"
keywords = ["notification", "macos", "terminal-notifier", "cli"]
categories = ["command-line-utilities", "os::macos-apis"]

[lib]
name = "nr"
path = "src/lib.rs"

[[bin]]
name = "nr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }